<resources>
    <string name="app_name">SMKCodingChallenge1</string>
    <string-array name="gender">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="label_biodata">BIODATA</string>
    <string name="hint_name">Nama</string>
    <string name="hint_age">Usia</string>
    <string name="hint_email">Email</string>
    <string name="hint_telephone">Telepon</string>
    <string name="hint_address">Alamat</string>
    <string name="label_submit">Simpan</string>
</resources>
