<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/tv_biodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_biodata"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_person_rounded"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/createName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:layout_margin="16dp"/>
        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/gender"/>
        <EditText
            android:id="@+id/createAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:layout_margin="16dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/createEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_margin="16dp"/>
        <EditText
            android:id="@+id/createTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telephone"
            android:layout_margin="16dp"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/createAddress"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/hint_address"
            android:layout_margin="16dp"
            android:inputType="textMultiLine"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_submit"
            android:layout_margin="16dp"/>
    </LinearLayout>
</ScrollView>