<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Biodata"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:layout_margin="16dp"/>
        <Spinner
            android:id="@+id/editSpinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/gender"/>
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_margin="16dp"/>
        <EditText
            android:id="@+id/editTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telephone"
            android:layout_margin="16dp"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/hint_address"
            android:layout_margin="16dp"
            android:inputType="textMultiLine"/>
        <Button
            android:id="@+id/btnSaveEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_submit"
            android:layout_margin="16dp"/>
    </LinearLayout>
</ScrollView>